--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "tentativa de criar o tabnews do filipe deschamps, projeto do curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "Diogo Felicio Demetrio Pereira",
   "license": "MIT",
@@ -12,5 +14,8 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.1"
   }
 }
